# oloproxx-engine

./: .clang-format  .gitignore  CMakeLists.txt  DEPENDENCY.md
cmake/: common.cmake  compiler.cmake  configurator.cmake  end_.cmake
cmake/engine/: config.cmake  package.cmake  platform.cmake  source.cmake
include/oloproxx-engine/base/: common.hpp  detect.h  kernel.hpp  lock.h  log.h  logger.h  logging.hpp  math.h  system.h  types.h
include/oloproxx-engine/base/string/: convector.hpp
include/oloproxx-engine/base/tl/: threading.h
include/oloproxx-engine/shared/: Filesystem.hpp  Logging.hpp
src/base/: log.cpp  system.cpp
src/shared/: Filesystem.cpp  Logging.cpp
test/common/: Core.cpp
